Revert "attempt 3 (perhaps final) to fix last note being covered by browser UI"
This reverts commit dbbf423bd46a361699cc68d40183858fd1efa0b5.

--- a/src/index.css
+++ b/src/index.css
@@ -367,7 +367,7 @@ body {
   margin-top: 20px;
   height: calc(100vh - 76px);
   overflow: auto;
-  padding-bottom: 90px;
+  padding-bottom: 80px;
   /* Removing scrollbar */
   -ms-overflow-style: none;
   scrollbar-width: none;
